Added inventory/stocks and inventory/stocks/count in openpai yaml
